ch09/ch09-start-another-alternative/iac-macro-usage/tests/fails/no_lambda_name.stderr
error: name property needs a value
 --> tests/fails/no_lambda_name.rs:5:21
  |
5 |       lambda (name =)
  |                     ^
